4. Updated Protocol from MQTT to websocket 5. Completed demo js code 6. Added a ML SDK 7. Added true model

--- a/Client/index.html
+++ b/Client/index.html
@@ -17,7 +17,7 @@
 		  appId: 'BJBop-Szz',
 		  accessToken:  'scofHXNjjiDHiDjTkqxjq56RVeeWWEAvAGJCLOkeDe8='
 		});
-		console.log(milkcocoa);
+		//console.log(milkcocoa);
 		var clickData = milkcocoa.dataStore('ClickData');		
 		function reply_click(clicked_id) {
 			console.log(clicked_id);
